# SLU

./: .gitmodules  README.md  compute_macs.py  evaluate.py  evaluate_crdnn_librispeech_enc_seq2seq_slu.py  evaluate_slu.py  evaluate_slu.sh  inference_crdnn_librispeech_enc_seq2seq_slu.py  inference_slu.py  prepare.py  profile_slu.sh  pyproject.toml  requirements.txt  train_crdnn_librispeech_enc_seq2seq_slu.py  train_hubert_encoder_gru_decoder_slu.py  train_slu.py  train_slu.sh  train_tokenizer.py  transform_jsonl_to_csv.py
hparams/: crdnn_librispeech_enc_seq2seq_slu.yaml  crdnn_librispeech_encoder_seq2seq_slu.yaml  distillHuBERT_encoder_gru_decoder_slu.yaml  hubert_encoder_gru_decoder_slu.yaml  slu.yaml  tokenizer.yaml
