[project]
name = "slu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "transformers[audio]>=4.57.1",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "ruff>=0.14.4",
]
