[project]
name = "slu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.8.0",
    "hyperpyyaml>=0.0.1",
    "joblib>=0.14.1",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.7",
    "numpy>=1.17.0",
    "packaging>=25.0",
    "pandas>=1.0.1",
    "pre-commit>=2.3.0",
    "scipy>=1.4.1",
    "sentencepiece>=0.1.91",
    "soundfile>=0.13.1 ; sys_platform == 'win32'",
    "speechbrain",
    "thop>=0.1.1.post2209072238",
    "torch>=2.1.0,<2.9",
    "torchaudio>=2.1.0,<2.9",
    "tqdm>=4.42.0",
    "transformers>=4.30.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]

[tool.uv.sources]
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git", rev = "develop" }
